Don't send iTip messages if groupware is turned off.

Debugged by Stephan Diestelhorst.

BUG: 282346